--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,14 @@ button {
     outline: 0;
 }
 
+.WhiteNavBar {
+    background: #FFFFFF !important;
+    box-shadow: 0 3px 28px rgba(0, 0, 0, 0.08) !important;
+}
+
+/**************************************************/
 .ButtonGroup {
-    margin: 20px 0;
+    margin: 20px 0 14px 0;
 }
 
 .BaseButton {
@@ -32,5 +38,52 @@ button {
 
 .BaseButtonActive {
     background: #FBC91B;
+}
 
+.LoadMoreContainer {
+    margin: 6px 0 12px 0;
+}
+
+.PrimaryButton {
+    background: #FFC700;
+    border-radius: 12px;
+    padding: 13px 13px;
+    cursor: pointer;
+}
+
+.PrimaryButton .Title {
+    font-size: 16px;
+    font-weight: bold;
+    color: #000000;
+}
+
+/********************************/
+.BaseCard {
+    background: #FFFFFF;
+    box-shadow: 0 3px 28px rgba(0, 0, 0, 0.08);
+    border-radius: 12px;
+    margin: 6px 0 !important;
+    padding: 16px;
+    width: 100%;
+}
+
+.BaseCard .Title {
+    font-size: 14px;
+    font-weight: bold;
+    margin: 0 0 5px 0;
+}
+
+.BaseCard .Content {
+    font-size: 12px;
+    margin: 0 0 5px 0;
+}
+
+.BaseCard .Details {
+    font-size: 10px;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.Footer {
+    height: 100px;
+    background: #FBC91B;
 }
