--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ button {
 .PrimaryButton .Title {
     font-size: 16px;
     font-weight: bold;
-    color: #000000;
+    color: rgba(0, 0, 0, 0.82);
 }
 
 /********************************/
